--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "aws-sdk": "^2.1135.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "exceljs": "^4.3.0",
     "handlebars": "4.7.7",
     "helmet": "5.0.2",
     "joi": "17.6.0",
