--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "helmet": "5.0.2",
     "joi": "17.6.0",
     "keycloak-connect": "^18.0.0",
+    "luxon": "3.1.1",
     "mjml": "4.12.0",
     "nanoid": "^3.3.4",
     "nest-keycloak-connect": "^1.8.3",
@@ -74,6 +75,7 @@
     "@types/express": "4.17.13",
     "@types/faker": "5.5.9",
     "@types/jest": "^29.2.3",
+    "@types/luxon": "3",
     "@types/mjml": "4.7.0",
     "@types/multer": "1.4.7",
     "@types/node": "16.9.1",
