--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -1,4 +1,5 @@
-FROM node:18-alpine3.16 as base
+FROM node:18-alpine3.17 as base
+RUN apk add --update --no-cache openssl1.1-compat
 WORKDIR /app
 
 # The @prisma/client package defines its own postinstall hook that's being
