--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@vegardit/prisma-generator-nestjs-dto": "1.5.1",
     "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
+    "fishery": "2.2.2",
     "husky": "7.0.2",
     "jest": "29.2.2",
     "jest-extended": "3.2.0",
