--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
     "@types/mjml": "4.7.0",
     "@types/multer": "1.4.7",
     "@types/node": "16.9.1",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "@vegardit/prisma-generator-nestjs-dto": "1.5.1",
     "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
