--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
     "@golevelup/nestjs-stripe": "0.3.4",
     "@golevelup/nestjs-webhooks": "0.2.14",
     "@keycloak/keycloak-admin-client": "18.0.0",
-    "@nestjs/axios": "0.1.0",
-    "@nestjs/cli": "9.1.4",
-    "@nestjs/common": "9.1.4",
-    "@nestjs/config": "2.2.0",
-    "@nestjs/core": "9.1.4",
-    "@nestjs/jwt": "9.0.0",
-    "@nestjs/platform-express": "9.1.4",
-    "@nestjs/swagger": "6.1.2",
-    "@nestjs/terminus": "9.1.2",
+    "@nestjs/axios": "^1.0.1",
+    "@nestjs/cli": "^9.1.8",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/jwt": "^10.0.1",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/swagger": "^6.1.4",
+    "@nestjs/terminus": "^9.1.4",
     "@ntegral/nestjs-sentry": "4.0.0",
     "@prisma/client": "4.3.1",
     "@sendgrid/client": "7.6.2",
@@ -63,8 +63,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
-    "@nestjs/schematics": "9.0.3",
-    "@nestjs/testing": "9.2.1",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.2.1",
     "@nrwl/cli": "^15.5.1",
     "@nrwl/eslint-plugin-nx": "^15.5.1",
     "@nrwl/jest": "^15.5.1",
@@ -97,8 +97,8 @@
     "prisma": "4.3.1",
     "prisma-dbml-generator": "0.9.1",
     "ts-jest": "29.0.3",
-    "ts-node": "10.2.1",
-    "typescript": "4.8.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "prisma": {
     "seed": "ts-node db/seed/index.ts"
