--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "prettier": "2.6.0",
     "prisma": "4.3.1",
     "prisma-dbml-generator": "0.9.1",
-    "ts-jest": "29.0.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
