--- a/package.json
+++ b/package.json
@@ -86,10 +86,10 @@
     "eslint-config-prettier": "8.3.0",
     "fishery": "2.2.2",
     "husky": "7.0.2",
-    "jest": "29.2.2",
-    "jest-extended": "3.2.0",
-    "jest-junit": "15.0.0",
-    "jest-mock-extended": "3.0.1",
+    "jest": "^29.3.1",
+    "jest-extended": "^3.2.3",
+    "jest-junit": "^15.0.0",
+    "jest-mock-extended": "^3.0.1",
     "lint-staged": "11.1.2",
     "nx": "^15.5.1",
     "prettier": "2.6.0",
