--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@nestjs/core": "9.1.4",
     "@nestjs/jwt": "9.0.0",
     "@nestjs/platform-express": "9.1.4",
+    "@nestjs/platform-socket.io": "^9.2.1",
     "@nestjs/swagger": "6.1.2",
     "@nestjs/terminus": "9.1.2",
+    "@nestjs/websockets": "^9.2.1",
     "@ntegral/nestjs-sentry": "4.0.0",
     "@prisma/client": "4.3.1",
     "@sendgrid/client": "7.6.2",
