--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,8 @@ jobs:
         run: cp .env.example .env
       - name: Run database
         run: docker-compose up -d pg-db
-      - run: yarn
+      - name: Install dependencies 
+        run: yarn install --immutable
       - name: Generate Prisma DB client
         run: yarn prisma generate
       - name: Migrate database
